2004-06-08 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b181

	* Fix: Javascript for next/prev Tabs was not correct initialisized.
	  (Caught by Christian M.)

2004-06-07 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b180

	* New: Added Previous and Next Tab Javascrit in ConfigWizard

	* Change: CSS in Config and Jensskin

	* Change: Text when Gallery is unconfigured


2004-06-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b179

	* Change: Remove two references to configure_instructions.php

2004-06-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b178

	* Change: Switch image/album counter to the improved numAccessibleItems()

	* Change: Fix a pluralize_n2/ngettext issue.

2004-06-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b177

	* Change: Text updates to config wizard, cause wizard to forget Guid
	  if the resetadmin file is removed after it's set, remove bad require()

2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b176

	* Change: Enable session-based GUID checking for "resetadmin" as
	  suggested by bharat

	* Change: Re-ran manifest to get rid of the recently removed files,
	  and as a general version update.

2004-06-03 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b175
	
	* Change: Tweaked again setup/login.inc

	* Change: Wording for messages when unconfigured or reconfiure is needed

	* Change: Removed unused files from error/

2004-06-02 Don Willingham <donwillingham@users.sf.net>  1.4.4-cvs-b174

	* Fix: Bug#962076, add "watermark" to "admin options" drop down menu.

2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b173

	* Fix: Config wizard - Using a valid admin account would log you 
	  in, even with a bad password.

2004-06-03 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b172

	* Change: Removed Caption for Custom Fields

	* Change: dos2unix setup/ folder

	* Change: Layout of setup/login.inc

	* Fix: login.inc didnt recognized a new login after logout from Gallery 
	
