@@ -1,3 +1,11 @@
+2004-06-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b182
+
+	* Change:  Add an 'uploadMode' option to config wizard to define which
+	  method to default to for add_photos.
+
+	* Fix:  Make sure that the user_version is set correctly for new users and for
+	  the userdb to prevent the 'upgrading users' notice on a new install.
+
 2004-06-08 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b181
 
 	* Fix: Javascript for next/prev Tabs was not correct initialisized.
@@ -10,7 +18,6 @@
 	* Change: CSS in Config and Jensskin
 
 	* Change: Text when Gallery is unconfigured
-
 
 2004-06-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b179
 
